# FluidAudio

./: CLAUDE.md  Package.resolved  Package.swift  README.md
Scripts/: README.md  (+3 more)
mobius/models/stt/cohere-transcribe-03-2026/coreml/: .gitignore  CLEANUP_SUMMARY.md  MLMODELC_LIMITATION.md  README.md  SUMMARY.md  TEST_RESULTS.md  analyze-our-model.py  analyze-reference-model.py  compile_models.py  compile_q8_to_mlmodelc.py  debug-decoder-step-by-step.py  debug-pytorch-decoder.py  export-decoder-cached-v2.py  export-decoder-fixed.py  export-decoder-masked.py  export-decoder-minimal.py  export-decoder-with-cross-kv.py  export-ultra-static-decoder.py  export-ultra-static-encoder.py  export-ultra-static-frontend.py  export_mlmodelc.py  extract-vocab-from-json.py  extract-vocab.py  inspect-our-decoder.py  inspect-reference-decoder.py  pyproject.toml  quantize_to_int8.py  setup-conversion-env.sh  setup-export-environment.sh  status.md  test-autoregressive-decode.py  test-librispeech.py  test-pytorch-wrapper.py  test-swift-cache.swift  test-transformers-ground-truth.py  test_q8_10_samples.py
mobius/models/stt/cohere-transcribe-03-2026/coreml/docs/: RESEARCH_INSIGHTS.md
mobius/models/stt/cohere-transcribe-03-2026/coreml/hf-upload/: .gitattributes  README.md  export-cross-kv-projector.py  export-encoder.py  metadata.json  model_card.md  vocab.json
mobius/models/stt/cohere-transcribe-03-2026/coreml/q8/: README.md  cohere_mel_spectrogram.py  example_inference.py  pyproject.toml  quickstart.py
mobius/models/stt/cohere-transcribe-03-2026/coreml/tests/: test-stateful-decoder.py
(+185 files in other folders)
